# fillit_test

fillit2/: CMakeLists.txt  main.c
fillit2/fillit/: a.out  checker.c  draw.c  fillit.c  fillit.h  final_init.c  final_init.c~  init_final.c  init_templates.c  input.c  place.c  q.c  reader.c  resizer.c  solver.c  test~  unplace.c  unshape.c
fillit2/libft/: ft_putchar.c
